it-quiz.css
* {
  color: #fff;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}
.main-container {
  height: 100vh;
  background-color: #168c80;
}
.it-quiz {
  height: 100vh;
  display: grid;
  grid-template-rows: 5% 35% 55%;
}
.top {
  display: flex;
  margin-left: 20px;
  margin-right: 20px;
  justify-content: space-between;
}
.home-btn {
  background-color: #168c80;
  border: none;
  padding-top: 10px;
  /* display: none; */
}
.home-btn lord-icon {
  width: 40px;
  height: 40px;
  cursor: pointer;
}
.back-button {
  background-color: #168c80;
  border: none;
  padding-top: 10px;
}
.back-button lord-icon {
  width: 40px;
  height: 40px;
  cursor: pointer;
  transform: rotate(180deg);
}
.count {
  padding-top: 10px;
  right: 10px;
  font-size: 20px;
}
.quiz-question {
  display: flex;
  text-align: center;
  align-items: center;
  justify-content: center;
  font-size: 28px;
  font-weight: 400;
  margin-left: 10px;
  margin-right: 10px;
}

.bottom-answers {
  display: flex;
  background-color: #0c4d46;
  justify-content: center;
  border-bottom: #ffffff26 solid 1px;
}
.quiz-answers {
  margin-top: 60px;
}
ul {
  list-style: none;
}
li button {
  border: none;
  width: 300px;
  height: 50px;
  margin-top: 15px;
  text-decoration: none;
  background-color: #168c80;
  cursor: pointer;
  font-size: 20px;
  border-radius: 30px;
}

li button:hover {
  background-color: #2ad2c1;
}
.correct:focus {
  background-color: rgb(42, 230, 42);
}

.incorrect:focus {
  background-color: rgb(238, 42, 42);
}
.next-question {
  height: 100%;
}
.next-question button {
  border: none;
  width: 100%;
  height: 100%;
  text-decoration: none;
  background-color: #0c4d46;
  cursor: pointer;
  font-size: 20px;
}
.next-question button:hover {
  background-color: #168c80;
  transition: all 0.5s;
}

@media only screen and (max-width: 600px) {
  .quiz-question {
    font-size: 18px;
  }
  li button {
    font-size: 15px;
    width: 250px;
    height: 35px;
  }
  .next-question button {
    font-size: 15px;
  }
  .back-button lord-icon {
    width: 30px;
    height: 30px;
  }
  .home-btn lord-icon {
    width: 30px;
    height: 30px;
  }
  .count {
    font-size: 18px;
  }
}

